refactor(theme): change colors and improve selector style

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,7 +37,7 @@
 		--sidebar-accent: 240 4.8% 95.9%;
 		--sidebar-accent-foreground: 240 5.9% 10%;
 		--sidebar-border: 220 13% 91%;
-		--sidebar-ring: 142.1 76.2% 36.3%;
+		--sidebar-ring: var(--ring);
 	}
 
 	.dark {
@@ -73,7 +73,7 @@
 		--sidebar-accent: 240 3.7% 15.9%;
 		--sidebar-accent-foreground: 240 4.8% 95.9%;
 		--sidebar-border: 240 3.7% 15.9%;
-		--sidebar-ring: 142.4 71.8% 29.2%;
+		--sidebar-ring: var(--ring);
 	}
 }
 
